--- a/301-400.md
+++ b/301-400.md
@@ -119,3 +119,12 @@ Integer.toString(n, 3);
 ``` java
 1162261467 % n == 0;
 ```
+# 327. Count of Range Sum
+求出前缀和，然后用tree map来维护前缀和
+
+`sum[i] - x >= lower && sum[i] - x <= upper`
+
+所以 `sum[i] - upper <= x <=sum[i] - lower`
+`x`代表的是`sum[j]`，每次放入`map`中，每次统计多少个`sub map`满足
+
+分治算法？
