--- a/301-400.md
+++ b/301-400.md
@@ -120,7 +120,9 @@ Integer.toString(n, 3);
 1162261467 % n == 0;
 ```
 # 327. Count of Range Sum
-求出前缀和，然后用tree map来维护前缀和
+直接O(n^2)比较直观
+
+求出前缀和，然后用`tree map`来维护前缀和
 
 `sum[i] - x >= lower && sum[i] - x <= upper`
 
