--- a/301-400.md
+++ b/301-400.md
@@ -129,4 +129,6 @@ Integer.toString(n, 3);
 所以 `sum[i] - upper <= x <=sum[i] - lower`
 `x`代表的是`sum[j]`，每次放入`map`中，每次统计多少个`sub map`满足
 
-分治算法？
+可以利用分治的思想，没太看懂
+# 328. Odd Even Linked List
+一个一个往后推就可以了
