--- a/301-400.md
+++ b/301-400.md
@@ -132,3 +132,6 @@ Integer.toString(n, 3);
 可以利用分治的思想，没太看懂
 # 328. Odd Even Linked List
 一个一个往后推就可以了
+# 329. Longest Increasing Path in a Matrix
+记忆化的递归，注意求过了的值不需要在计算了，`dfs`的时候不需要用`visit`因为有大于的判断所以不会循环递归
+> 记忆化，不为`0`说明已经求到了该点的最大值
