--- a/301-400.md
+++ b/301-400.md
@@ -135,3 +135,5 @@ Integer.toString(n, 3);
 # 329. Longest Increasing Path in a Matrix
 记忆化的递归，注意求过了的值不需要在计算了，`dfs`的时候不需要用`visit`因为有大于的判断所以不会循环递归
 > 记忆化，不为`0`说明已经求到了该点的最大值
+# 330. Patching Array
+用一个区间来记录当前能够遍历到的区间，考虑当前数组的值如果大于当前遍历的元素，则有空的区间需要填充，如果小于则可以直接延伸，遍历的值直接使用区间的后一个元素
