--- a/301-400.md
+++ b/301-400.md
@@ -137,3 +137,7 @@ Integer.toString(n, 3);
 > 记忆化，不为`0`说明已经求到了该点的最大值
 # 330. Patching Array
 用一个区间来记录当前能够遍历到的区间，考虑当前数组的值如果大于当前遍历的元素，则有空的区间需要填充，如果小于则可以直接延伸，遍历的值直接使用区间的后一个元素
+# 331. Verify Preorder Serialization of a Binary Tree
+遍历每个元素，查看节点和叶子的差值状态，不满足时即可返回
+
+用递归的方法，要注意考虑哪些点是可以分开两棵子树的，这个剪枝能保证不超时
