--- a/301-400.md
+++ b/301-400.md
@@ -141,3 +141,6 @@ Integer.toString(n, 3);
 遍历每个元素，查看节点和叶子的差值状态，不满足时即可返回
 
 用递归的方法，要注意考虑哪些点是可以分开两棵子树的，这个剪枝能保证不超时
+# 332. Reconstruct Itinerary
+`dfs`，考虑用`map`来存每个元素和对应的目的地（优先级队列），遍历时直接取出来，不用每一层都全遍历
+> 因为一定合理，所以每次怎么能直接拿出那个元素较小就可以了，`dfs`里也就不需要那么多判断
