--- a/301-400.md
+++ b/301-400.md
@@ -144,3 +144,11 @@ Integer.toString(n, 3);
 # 332. Reconstruct Itinerary
 `dfs`，考虑用`map`来存每个元素和对应的目的地（优先级队列），遍历时直接取出来，不用每一层都全遍历
 > 因为一定合理，所以每次怎么能直接拿出那个元素较小就可以了，`dfs`里也就不需要那么多判断
+# 334. Increasing Triplet Subsequence
+`one`始终记录最小元素，`two`为某个子序列里第二大的数
+
+接下来不断更新`one`，同时保持`two`尽可能的小
+
+如果下一个元素比`two`大，说明找到了三元组
+
+如果空间够多，可以考虑计算每个点前面是否有小于的，后面是否有大于的
