--- a/301-400.md
+++ b/301-400.md
@@ -154,3 +154,5 @@ Integer.toString(n, 3);
 如果空间够多，可以考虑计算每个点前面是否有小于的，后面是否有大于的
 # 335. Self Crossing
 考虑相交的三种情况，利用滑动的思想用前几个对当前进行判断，对每一个进行判断即可
+# 336. Palindrome Pairs
+对每个元素进行遍历分割，看分割后的是否存在回文，存在即看另一半是否在`map`里，
