--- a/301-400.md
+++ b/301-400.md
@@ -110,7 +110,7 @@ for (int i = 1; i <= amount; ++i) {
 # 326. Power of Three
 循环可以解决
 
-不用循环考虑2的幂次是第一位为`1`，所以对`3`来说，可以转换为`3`进制后判断第一位为`1`且其余为`0`（不含`2`），转换之后也可以用正则匹配
+不用循环，考虑`2`的幂次是第一位为`1`，所以对`3`来说，可以转换为`3`进制后判断第一位为`1`且其余为`0`（不含`2`），转换之后也可以用正则匹配
 ``` java
 Integer.toString(n, 3);
 ```
