--- a/301-400.md
+++ b/301-400.md
@@ -31,7 +31,7 @@
 # 310. Minimum Height Trees
 用邻接矩阵构造图，记录每个点的度数，将边缘度数`1`的去除掉，直到剩下最多最后两个点
 # 312. Burst Balloons
-直接搜索每次拿出一个（将nums减取一个后进入下层递归）遍历所有情况的思路会超时
+直接搜索每次拿出一个（将`nums`减取一个后进入下层递归）遍历所有情况的思路会超时
 
 上面的方法不好加记忆，因此考虑一个区间的递归左右两边，加上记忆能够通过
 
