--- a/301-400.md
+++ b/301-400.md
@@ -155,4 +155,24 @@ Integer.toString(n, 3);
 # 335. Self Crossing
 考虑相交的三种情况，利用滑动的思想用前几个对当前进行判断，对每一个进行判断即可
 # 336. Palindrome Pairs
-对每个元素进行遍历分割，看分割后的是否存在回文，存在即看另一半是否在`map`里，
+对每个元素进行遍历分割，看分割后的是否存在回文，存在即看另一半是否在`map`里
+# 337. House Robber III
+引入一个变量，表示是否之前的元素选过，若没选过，则比较选当前和不选当前的情况，否则直接不选当前
+>有一些重复情况，可以考虑优化
+
+另外考虑树形`dp`
+``` java
+// res[0]为不包括根节点的最大值，res[1]为包括根节点的最大值
+private int[] doRob(TreeNode root){
+    int[] res = new int[2];
+    if(root == null)
+        return res;
+    int[] left = doRob(root.left);
+    int[] right = doRob(root.right);
+    // 不包含根节点，最大值为两个子树的最大值之和
+    res[0] = Math.max(left[0],left[1])+Math.max(right[0],right[1]);
+    // 包含根节点，最大值为两个子树不包含根节点的最大值加上根节点的值
+    res[1] = left[0] + right[0] + root.val;
+    return res;
+}
+```
