--- a/301-400.md
+++ b/301-400.md
@@ -176,3 +176,35 @@ private int[] doRob(TreeNode root){
     return res;
 }
 ```
+# 338. Counting Bits
+可以一个一个算
+``` java
+int count;
+for (count = 0; x != 0; ++count)
+  x &= x - 1;
+return count;
+```
+考虑奇偶
+1. 奇数一定比前面那个偶数多一个`1`，因为多的就是最低位的`1`
+2. 偶数中`1`的个数一定和除以`2`之后的那个数一样多
+> 因为最低位是`0`，除以`2`就是右移一位，也就是把那个`0`抹掉而已，所以`1`的个数是不变的
+
+考虑最右的一个`1`的
+1. `i & (i - 1)`可以去掉最右边的一个`1`
+2. `i`就是`i & (i - 1)`加上`1`
+``` java
+int[] res = new int[num + 1];
+for(int i = 1; i <= num; i++){ 
+    res[i] = res[i & (i - 1)] + 1;
+}
+```
+考虑低位的数字
+1. 若是`1`，右移后的数加`1`
+2. 若是`0`，就等于右移后的数
+``` java
+int[] res = new int[num + 1];
+for(int i = 0; i <= num; i++){
+    res[i] = res[i >> 1] + (i & 1);
+}
+return res;
+```
