--- a/301-400.md
+++ b/301-400.md
@@ -208,3 +208,23 @@ for(int i = 0; i <= num; i++){
 }
 return res;
 ```
+# 341. Flatten Nested List Iterator
+在初始化的时候把所有元素都保存起来即可
+# 342. Power of Four
+跟3一样，转换为`4`进制，看第一位是否为`1`
+
+或者用二进制表示时最高为`1`，其余为`0`，且有奇数个数字，考虑用最大的奇数为`1`（`1010101010101010101010101010101`）与其相与
+``` java
+if ((num & num - 1) != 0)
+    return false;
+if ((num & 0x55555555) == num)
+    return true;
+```
+可以一直除以`4`
+``` java
+while ( (num != 0)  && (num % 4 == 0)) {
+    num /= 4;
+}
+return num == 1;
+
+```
