--- a/301-400.md
+++ b/301-400.md
@@ -228,3 +228,15 @@ while ( (num != 0)  && (num % 4 == 0)) {
 return num == 1;
 
 ```
+# 343. Integer Break
+动态规划，若分两次，则是`j*(i-j)`，若分多次则是`j*dp[i-j]`
+
+从数学来看，需要三的次数越多越好
+``` java
+int sum=1;
+while(n>4){
+    sum=sum*3;
+    n=n-3;
+}
+return sum*n;
+```
