--- a/301-400.md
+++ b/301-400.md
@@ -240,3 +240,9 @@ while(n>4){
 }
 return sum*n;
 ```
+# 344. Reverse String
+两头扫，交换元素
+# 345. Reverse Vowels of a String
+从左往右，碰到元音就从右找第一个元音放进入
+
+可以考虑两头扫，扫到都是元音就交换
