--- a/301-400.md
+++ b/301-400.md
@@ -246,3 +246,15 @@ return sum*n;
 从左往右，碰到元音就从右找第一个元音放进入
 
 可以考虑两头扫，扫到都是元音就交换
+# 347. Top K Frequent Elements
+先用`map`统计，然后用堆来排序，少于`k`个直接放进去，大于`k`个跟顶比较，看是否弹出放入
+``` java
+HashMap<Integer, Integer> count = new HashMap();
+for (int n: nums) {
+  count.put(n, count.getOrDefault(n, 0) + 1);
+}
+```
+# 349. Intersection of Two Arrays
+使用`set`来记录即可
+# 350. Intersection of Two Arrays II
+使用`map`记录出现次数
