--- a/301-400.md
+++ b/301-400.md
@@ -258,3 +258,7 @@ for (int n: nums) {
 使用`set`来记录即可
 # 350. Intersection of Two Arrays II
 使用`map`记录出现次数
+# 352. Data Stream as Disjoint Intervals
+用`List<int[]>`来存整个区间，`set`存元素解决特殊情况，遍历
+* 看否是比第一个元素小`1`，小就加入区间
+* 比第二个元素大`1`则加入区间，此时还要看是否能与后面的一个区间合并
