--- a/201-300.md
+++ b/201-300.md
@@ -511,7 +511,7 @@ return 3;
  # 299. Bulls and Cows
  可以考虑求两个字符串的交集，然后先算个`A`，再由交集减去`A`即可得到`B`
  # 300. Longest Increasing Subsequence
- 循环dp，求i时使用前面所有的状态，最后的结果时返回整个dp中最大的
+ 循环`dp`，求`i`时使用前面所有的状态，最后的结果时返回整个`dp`中最大的
  
  还可以利用一个数组来保存最大的序列，每次替换的二分的去做
  ``` java
