--- a/301-400.md
+++ b/301-400.md
@@ -262,3 +262,25 @@ for (int n: nums) {
 用`List<int[]>`来存整个区间，`set`存元素解决特殊情况，遍历
 * 看否是比第一个元素小`1`，小就加入区间
 * 比第二个元素大`1`则加入区间，此时还要看是否能与后面的一个区间合并
+# 354. Russian Doll Envelopes
+排序后用`dp`，找最长上升序列，此种遍历`O(N^2)`
+
+也可以用二分的方法来求上升序列`O(NlogN)`
+> 基本思路是维护升序队列，枚举数组里的数，如果插入值大于队列，就插在末尾，反之，就按查找到序号往左替换队列的值
+
+`[9, 2, 5, 3, 7, 101, 18, 4]`
+
+有效长度/队列/插入值
+* 1 [-inf, 9] <- 9
+* 1 [-inf, 2] <- 2
+* 2 [-inf, 2, 5] <- 5
+* 2 [-inf, 2, 3] <- 3
+* 3 [-inf, 2, 3, 7] <- 7
+* 4 [-inf, 2, 3, 7, 101] <- 101
+* 4 [-inf, 2, 3, 7, 18] <- 18
+* 4 [-inf, 2, 3, 4, 18] <- 4
+
+为了避免`[3,3], [3,4]`影响，要将其倒序排列
+``` java
+Arrays.sort(envelopes, (a, b) -> (a[0] == b[0] ? b[1]-a[1] : a[0]-b[0]));
+```
