--- a/301-400.md
+++ b/301-400.md
@@ -284,3 +284,5 @@ for (int n: nums) {
 ``` java
 Arrays.sort(envelopes, (a, b) -> (a[0] == b[0] ? b[1]-a[1] : a[0]-b[0]));
 ```
+# 355. Design Twitter
+`list`记录所有的推文，`map`记录每个人的好友，每次从`list`后向前遍历
