--- a/301-400.md
+++ b/301-400.md
@@ -286,3 +286,11 @@ Arrays.sort(envelopes, (a, b) -> (a[0] == b[0] ? b[1]-a[1] : a[0]-b[0]));
 ```
 # 355. Design Twitter
 `list`记录所有的推文，`map`记录每个人的好友，每次从`list`后向前遍历
+# 357. Count Numbers with Unique Digits
+n=1: res=10
+
+n=2: res=9*9+10 
+> 两位数第一位只能为`1-9`，第二位只能为非第一位的数，加上一位数的所有结果
+
+n=3: res=9 * 9 * 8 + 91 
+> 三位数第一位只能为`1-9`，第二位只能为非第一位的数，第三位只能为非前两位的数，加上两位数的所有结果
