--- a/201-300.md
+++ b/201-300.md
@@ -425,11 +425,11 @@ group by b.request_at
 * 依此类推
 > 注意在判断`index`移动时，不能用`else if`，这样会重复计算
 # 268. Missing Number
-先异或一便`0-n`，再异或`nums`中的元素，剩下的就是少的
+先异或一边`0-n`，再异或`nums`中的元素，剩下的就是少的
 
 也可以用`set`去查找
 
-也可以用数据方法，求出应该的和再减去现再的和
+也可以用数学方法，求出应该的和再减去现再的和
 # 273. Integer to English Words
 每三位数分开提交
 # 274. H-Index
