--- a/301-400.md
+++ b/301-400.md
@@ -294,3 +294,5 @@ n=2: res=9*9+10
 
 n=3: res=9 * 9 * 8 + 91 
 > 三位数第一位只能为`1-9`，第二位只能为非第一位的数，第三位只能为非前两位的数，加上两位数的所有结果
+# 363. Max Sum of Rectangle No Larger Than K
+跟[304](#304-range-sum-query-2d---immutable)的思路，暴力求每个矩阵的值，复杂度比较高
