--- a/301-400.md
+++ b/301-400.md
@@ -296,3 +296,8 @@ n=3: res=9 * 9 * 8 + 91
 > 三位数第一位只能为`1-9`，第二位只能为非第一位的数，第三位只能为非前两位的数，加上两位数的所有结果
 # 363. Max Sum of Rectangle No Larger Than K
 跟[304](#304-range-sum-query-2d---immutable)的思路，暴力求每个矩阵的值，复杂度比较高
+# 365. Water and Jug Problem
+使用搜索的方法，讨论每次转换的情况会超时
+
+直接用最大公约数的思路，看`x`，`y`的最大公约数是否能被`z`整除
+
