--- a/1-100.md
+++ b/1-100.md
@@ -469,7 +469,7 @@ if (head.next == nex) {
 >把递归理解为已经处理的结果，再在本级中运用，可以方便的处理各种问题
 # 84. Largest Rectangle in Histogram
 
-考虑分值的方法，找到最小值的位置二分求左边、右边和全部中最大值
+考虑分治的方法，找到最小值的位置二分求左边、右边和全部中最大值
 
 普通方法是以当前值为高向左和向右找比它低的，可以考虑使用单调栈，栈中存放索引值，来计算宽度
 > 把这个想象成锯木板，如果木板都是递增的就一直往里放，如果突然遇到一块木板`i`比栈顶矮了一截，就找之前最戳出来的一块（其实就是第`i-1`块），计算一下这个木板单独的面积，然后把它锯成次高的，因为之后的计算都再也用不着这块木板本身的高度了（复杂度降低）。再然后如果次高的仍然比现在这个`i`木板高，就继续单独计算这个次高木板的面积（应该是第`i-1`和`i-2`块），再把它俩锯短。直到发觉不需要锯就比第`i`块矮了，`i`入栈，继续往右找更高的。为了避免到了最后一直都是递增的，可以在最后加一块高度为`0`的木板
