--- a/301-400.md
+++ b/301-400.md
@@ -300,4 +300,21 @@ n=3: res=9 * 9 * 8 + 91
 使用搜索的方法，讨论每次转换的情况会超时
 
 直接用最大公约数的思路，看`x`，`y`的最大公约数是否能被`z`整除
+# 367. Valid Perfect Square
+循环求解
+
+还可以用
+* 二分
+* 数学的方法
+> `1+3+5+7+9+…+(2n-1)=n^2`
+* 牛顿迭代
+# 368. Largest Divisible Subset
+排序后动态规划
+# 371. Sum of Two Integers
+异或表示不带进位的加法
+
+与表示是否该位置要进位，想左移一位表示进位的位置
+
+当存在进位的时候需要继续相加
+
 
