--- a/301-400.md
+++ b/301-400.md
@@ -316,5 +316,13 @@ n=3: res=9 * 9 * 8 + 91
 与表示是否该位置要进位，想左移一位表示进位的位置
 
 当存在进位的时候需要继续相加
+# 372. Super Pow
+按二分的方法递归求幂次，有快速幂的方法，用二进制来算，思路很像
 
+每次直接拿一个`b`中的值来算，算完下一轮求结果的`10`次方
 
+更数学的方法可以用欧拉-费马降幂
+
+# 373. Find K Pairs with Smallest Sums
+暴力求出所有的和，用优先级队列求出最前面的`k`个
+>可以剪枝，当求到`k`个，当前已经有`k`个就可以`break`，堆内有`k`个，当前比堆顶还要大，可以`break`
