--- a/301-400.md
+++ b/301-400.md
@@ -326,3 +326,13 @@ n=3: res=9 * 9 * 8 + 91
 # 373. Find K Pairs with Smallest Sums
 暴力求出所有的和，用优先级队列求出最前面的`k`个
 >可以剪枝，当求到`k`个，当前已经有`k`个就可以`break`，堆内有`k`个，当前比堆顶还要大，可以`break`
+# 374. Guess Number Higher or Lower
+二分
+# 375. Guess Number Higher or Lower II
+不是求次数，所以二分不对
+
+`dp`
+>对`i`到`j`的`x`，`dp[i][j]= x + Math.max(dp[i][x - 1], dp[x + 1][j])`
+
+考虑要求一个大区间，需要先求出每个小区间，因此`dp`的方式是区间从小到大，按长度增长来求每个区间
+
