--- a/301-400.md
+++ b/301-400.md
@@ -335,4 +335,19 @@ n=3: res=9 * 9 * 8 + 91
 >对`i`到`j`的`x`，`dp[i][j]= x + Math.max(dp[i][x - 1], dp[x + 1][j])`
 
 考虑要求一个大区间，需要先求出每个小区间，因此`dp`的方式是区间从小到大，按长度增长来求每个区间
+# 376. Wiggle Subsequence
+动态规划，先求差值，然后比较前后的变化情况，去掉两个元素相等的情况
 
+更好的`dp`
+``` java
+int up = 1;
+int down = 1;
+for (int i = 1; i < n; i++) {
+    if (nums[i] > nums[i - 1]) {
+        up = down + 1;
+    }
+    if (nums[i] < nums[i - 1]) {
+        down = up + 1;
+    }
+}
+```
