--- a/301-400.md
+++ b/301-400.md
@@ -351,3 +351,9 @@ for (int i = 1; i < n; i++) {
     }
 }
 ```
+# 377. Combination Sum IV
+有点像背包问题，注意是带顺序的，即`(1,2)`和`(2,1)`是不同的
+
+> `dp[i] = dp[i-nums[0]]+dp[i-nums[1]]+...dp[i-nums[len-1]]`
+
+`dp[4] = 选1(dp[3]) + 选2(dp[2]) + 选3(dp[1])`
