--- a/301-400.md
+++ b/301-400.md
@@ -357,3 +357,13 @@ for (int i = 1; i < n; i++) {
 > `dp[i] = dp[i-nums[0]]+dp[i-nums[1]]+...dp[i-nums[len-1]]`
 
 `dp[4] = 选1(dp[3]) + 选2(dp[2]) + 选3(dp[1])`
+# 378. Kth Smallest Element in a Sorted Matrix
+对二维数组的最小值最大值进行二分，第`k`个数一定在之前
+
+统计小于等于`mid`的个数
+* 如果个数小于`k`，则在`mid`右边，`left=mid+1`
+* 若大于等于`k`，可能在`mid`左边且可能包含`mid`，`right=mid`
+
+注意到`k`一直在`left`和`right`之间，当`left==rihgt`，即可返回
+
+这里用的值的二分，`check`是否满足，而不是对坐标进行判断
