--- a/301-400.md
+++ b/301-400.md
@@ -367,3 +367,5 @@ for (int i = 1; i < n; i++) {
 注意到`k`一直在`left`和`right`之间，当`left==rihgt`，即可返回
 
 这里用的值的二分，`check`是否满足，而不是对坐标进行判断
+# 380. Insert Delete GetRandom O(1)
+用`map`记录元素下表，`list`记录所有元素，注意删除的时候，用最后一个与删除元素进行交换
