--- a/301-400.md
+++ b/301-400.md
@@ -368,4 +368,6 @@ for (int i = 1; i < n; i++) {
 
 这里用的值的二分，`check`是否满足，而不是对坐标进行判断
 # 380. Insert Delete GetRandom O(1)
-用`map`记录元素下表，`list`记录所有元素，注意删除的时候，用最后一个与删除元素进行交换
+用`map`记录元素下标，`list`记录所有元素，注意删除的时候，用最后一个与删除元素进行交换
+# 381. Insert Delete GetRandom O(1) - Duplicates allowed
+跟[380](#380-insert-delete-getrandom-o(1))类似，只是要记录所有的下标，删除的时候比较绕，`map`的`list`可以考虑用`set`
