--- a/301-400.md
+++ b/301-400.md
@@ -371,3 +371,7 @@ for (int i = 1; i < n; i++) {
 用`map`记录元素下标，`list`记录所有元素，注意删除的时候，用最后一个与删除元素进行交换
 # 381. Insert Delete GetRandom O(1) - Duplicates allowed
 跟[380](#380-insert-delete-getrandom-o(1))类似，只是要记录所有的下标，删除的时候比较绕，`map`的`list`可以考虑用`set`
+# 382. Linked List Random Node
+蓄水池抽样，每个位置以`1/i`的概率去替换
+
+也可以直接把所有值存起来，不过比较耗内存
