--- a/301-400.md
+++ b/301-400.md
@@ -375,3 +375,12 @@ for (int i = 1; i < n; i++) {
 蓄水池抽样，每个位置以`1/i`的概率去替换
 
 也可以直接把所有值存起来，不过比较耗内存
+# 383. Ransom Note
+记录次数，看是否存在大于情况
+# 384. Shuffle an Array
+用到了集合类中的`shuffle`，也可以考虑从后往前对每个元素与前面随机的一个元素进行交换
+``` java
+for(int n = arr.length; n > 1; n--) {
+    swap(arr, n - 1, r.nextInt(n));
+}
+```
