--- a/301-400.md
+++ b/301-400.md
@@ -384,3 +384,26 @@ for(int n = arr.length; n > 1; n--) {
     swap(arr, n - 1, r.nextInt(n));
 }
 ```
+# 386. Lexicographical Numbers
+将所有元素按`string`放到优先队列中，自动排好后弹出
+
+或者放到`list`里`sort`，然后转成`int`
+
+可以`dfs`
+```` java
+void dfs(int max, int preNum) {
+    if (10 * preNum > max) {
+        return;
+    }
+    int nowNum = preNum * 10;
+    for (int i = 0; i < 10; i++) {
+        int n = nowNum + i;
+        if (n <= max && n != 0) {
+            result.add(n);
+            dfs(max, n);
+        }
+    }
+}
+````
+# 387. First Unique Character in a String
+统计每个元素出现的次数，再扫描一遍看第一个`1`次出现的位置
