--- a/301-400.md
+++ b/301-400.md
@@ -407,3 +407,5 @@ void dfs(int max, int preNum) {
 ````
 # 387. First Unique Character in a String
 统计每个元素出现的次数，再扫描一遍看第一个`1`次出现的位置
+# 388. Longest Absolute File Path
+构造一棵树，然后做`dfs`
