--- a/301-400.md
+++ b/301-400.md
@@ -409,3 +409,15 @@ void dfs(int max, int preNum) {
 统计每个元素出现的次数，再扫描一遍看第一个`1`次出现的位置
 # 388. Longest Absolute File Path
 构造一棵树，然后做`dfs`
+# 389. Find the Difference
+记录次数比较
+
+考虑每个字母代表了一个数字，`t`的总和减去`s`的总和即是答案
+``` java
+int charCode = t.charAt(s.length());
+for (int i = 0; i < s.length(); ++i) {
+      charCode -= (int)s.charAt(i);
+      charCode += (int)t.charAt(i); 
+}
+return (char)charCode;
+```
