--- a/301-400.md
+++ b/301-400.md
@@ -421,3 +421,13 @@ for (int i = 0; i < s.length(); ++i) {
 }
 return (char)charCode;
 ```
+# 390. Elimination Game
+* 对一个输入`[1，2，3，4，5，6]`，第一次删除后为`[2，4，6]`，可视为`2 * [1，2，3]`
+* 对一个输入`[1，2，3，4，5，6, 7]`，第一次删除后为`[2，4，6]`，可视为`2 * [1，2，3]`
+> `f(n) = 2 * b(n/2)`
+
+反过来
+* 对一个输入`[1，2，3，4，5，6, 7]`，第一次删除后为`[2，4，6]`，可视为`2 * [1，2，3]`
+> `b(n) = 2 * f(n/2)`
+* 对一个输入`[1，2，3，4，5，6]`，第一次删除后为`[1，3，5]`，可视为`2 * [1，2，3] - [1]`
+> `b(n) = 2 * f(n/2) -1`
