--- a/301-400.md
+++ b/301-400.md
@@ -431,3 +431,8 @@ return (char)charCode;
 > `b(n) = 2 * f(n/2)`
 * 对一个输入`[1，2，3，4，5，6]`，第一次删除后为`[1，3，5]`，可视为`2 * [1，2，3] - [1]`
 > `b(n) = 2 * f(n/2) -1`
+# 391. Perfect Rectangle
+最开始想对大矩阵进行每个矩阵的填充，超时，考虑使用面积
+
+考虑矩形的四个点，将每个小矩形的面积加起来，最后保留完美矩形的四个点，看面积是否一致
+
