--- a/301-400.md
+++ b/301-400.md
@@ -438,3 +438,6 @@ return (char)charCode;
 
 # 392. Is Subsequence
 一个一个往后遍历即可
+# 393. UTF-8 Validation
+判断前几位的值进入不同的循环，注意判断比如`1110xxxx`开头的数的方法
+> `(num & 0b11110000) == 0b11100000`
