--- a/301-400.md
+++ b/301-400.md
@@ -441,3 +441,5 @@ return (char)charCode;
 # 393. UTF-8 Validation
 判断前几位的值进入不同的循环，注意判断比如`1110xxxx`开头的数的方法
 > `(num & 0b11110000) == 0b11100000`
+# 394. Decode String
+利用栈，遇到]就弹栈，拼接字符串后再放入栈中
