--- a/301-400.md
+++ b/301-400.md
@@ -443,3 +443,6 @@ return (char)charCode;
 > `(num & 0b11110000) == 0b11100000`
 # 394. Decode String
 利用栈，遇到`]`就弹栈，拼接字符串后再放入栈中
+# 395. Longest Substring with At Least K Repeating Characters
+对肯定不行的位置进行递归二分，
+> 考虑[375](#375-guess-number-higher-or-lower-ii)的区间`dp`，应该有点类似，这种二分有点像树，感觉递归好理解一些，树形`dp`应该也可以
