--- a/301-400.md
+++ b/301-400.md
@@ -446,3 +446,5 @@ return (char)charCode;
 # 395. Longest Substring with At Least K Repeating Characters
 对肯定不行的位置进行递归二分，
 > 考虑[375](#375-guess-number-higher-or-lower-ii)的区间`dp`，应该有点类似，这种二分有点像树，感觉递归好理解一些，树形`dp`应该也可以
+# 396. Rotate Function
+找到递推的关系，考虑前一项跟后一项的关系，用`sum`来处理 
