--- a/301-400.md
+++ b/301-400.md
@@ -447,4 +447,7 @@ return (char)charCode;
 对肯定不行的位置进行递归二分，
 > 考虑[375](#375-guess-number-higher-or-lower-ii)的区间`dp`，应该有点类似，这种二分有点像树，感觉递归好理解一些，树形`dp`应该也可以
 # 396. Rotate Function
-找到递推的关系，考虑前一项跟后一项的关系，用`sum`来处理 
+找到递推的关系，考虑前一项跟后一项的关系，用`sum`来处理
+# 397. Integer Replacement
+递归，记忆化内存超了，不记忆化算的次数其实不多
+ 
