--- a/301-400.md
+++ b/301-400.md
@@ -450,4 +450,22 @@ return (char)charCode;
 找到递推的关系，考虑前一项跟后一项的关系，用`sum`来处理
 # 397. Integer Replacement
 递归，记忆化内存超了，不记忆化算的次数其实不多
+ # 398. Random Pick Index
+ 保存每个值的索引然后随机返回
+ 
+ 这个题应该想考蓄水池采样
+ >假设当前正要读取第`n`个数据，则我们以`1/n`的概率留下该数据，否则留下前`n-1`个数据中的一个
+ ``` java
+Random r = new Random();
+int n = 0;
+int index = 0;
+for(int i = 0;i < nums.length;i++)
+    if(nums[i] == target){
+        n++;
+        // 以1/n的概率留下该数据
+        if(r.nextInt() % n == 0) index = i;
+    }
+return index;
+
+```
  
