--- a/301-400.md
+++ b/301-400.md
@@ -471,4 +471,9 @@ return index;
 # 399. Evaluate Division
 保存每个数与相关数的关系和结果，然后对查询递归搜索结果
 > 可以考虑并查集
- 
+ # 400. Nth Digit
+ 找规律 
+ * 1-9     ->  1*9
+ * 10-99   ->  2*90
+ * 100-999 ->  3*900
+ 判断`n`应该是哪个位置即可
