--- a/401-500.md
+++ b/401-500.md
@@ -32,3 +32,17 @@ private void sub(int num, int start, int cnt, int[] stat){
     }
 }
 ```
+# 402. Remove K Digits
+从头到尾，如果前面的数大于后面的，说明该值是要被去掉的，重复这个过程即可
+> 考虑效率上，若字符串是升序的，则`flag`为`false`，可以直接去掉后面几位，不用再循环
+
+可以用一个栈来存应该放的元素，维护一个递增的栈
+``` java
+for (int i = 0; i < num.length(); i++) {
+    while (k > 0 && !stack.isEmpty() && num.charAt(i) < stack.peek()) {
+        stack.pop();
+        k--;
+    }
+    stack.push(num.charAt(i));
+}
+```
