--- a/401-500.md
+++ b/401-500.md
@@ -46,3 +46,8 @@ for (int i = 0; i < num.length(); i++) {
     stack.push(num.charAt(i));
 }
 ```
+# 403. Frog Jump
+用一个`map`记录每个数可以跳多少步过来，然后对该数遍历可以跳到的位置，并把步数写到对应的数字中
+> 本质上是动态规划
+
+考虑用图的的层次遍历的方法，记录每个数跟上一次的步数，但是超内存了
