--- a/401-500.md
+++ b/401-500.md
@@ -51,3 +51,12 @@ for (int i = 0; i < num.length(); i++) {
 > 本质上是动态规划
 
 考虑用图的的层次遍历的方法，记录每个数跟上一次的步数，但是超内存了
+# 404. Sum of Left Leaves
+用一个标志记录当前节点是否是左节点，且是叶子节点
+
+或者
+``` java
+if(root.left != null && root.left.left == null && root.left.right == null){
+    res += root.left.val;
+}
+```
