--- a/401-500.md
+++ b/401-500.md
@@ -60,3 +60,9 @@ if(root.left != null && root.left.left == null && root.left.right == null){
     res += root.left.val;
 }
 ```
+# 405. Convert a Number to Hexadecimal
+可以使用库函数
+* int to hex 
+>`Integer.toHexString()`
+* hex to int 
+>`Integer.valueOf("12ff",16)`
