--- a/401-500.md
+++ b/401-500.md
@@ -66,3 +66,16 @@ if(root.left != null && root.left.left == null && root.left.right == null){
 >`Integer.toHexString()`
 * hex to int 
 >`Integer.valueOf("12ff",16)`
+# 406. Queue Reconstruction by Height
+把每个`k`的值存起来（由大到小），然后取出来从头遍历插入对应的位置
+
+其实是个排序问题
+1. 按照先`h`降序，`k`升序排序
+2. 遍历排序后的数组，根据`k`插入到`k`的位置上
+``` java
+Arrays.sort(people, (o1, o2) -> o1[0] == o2[0] ? o1[1] - o2[1] : o2[0] - o1[0]);
+LinkedList<int[]> list = new LinkedList<>();
+for (int[] i : people) {
+    list.add(i[1], i);
+}
+```
