--- a/401-500.md
+++ b/401-500.md
@@ -61,6 +61,8 @@ if(root.left != null && root.left.left == null && root.left.right == null){
 }
 ```
 # 405. Convert a Number to Hexadecimal
+每四位进行转换成十六进制
+
 可以使用库函数
 * int to hex 
 >`Integer.toHexString()`
