--- a/401-500.md
+++ b/401-500.md
@@ -81,3 +81,21 @@ for (int[] i : people) {
     list.add(i[1], i);
 }
 ```
+# 407. Trapping Rain Water II
+用接雨水的思路不能解决这个问题，但是用这个问题可以解决第一个接雨水问题
+> 用优先队列存储边缘的点，再往里面推进，每次拿出最小的几个点，访问临近的点，并且保持水位不减小
+
+如：
+
+|1|2|3|4|5|
+|:-:|:-:|:-:|:-:|:-:|
+|10|3|5|2|4|
+
+1. 把`10`跟`4`放入队列
+2. 弹出`4`把访问`2`，`res += 4-2`，把`2`放入队列，其实放的是`4：max(4,2)`
+3. 弹出`4`把访问`5`，把`5`放入队列，`max(5,4)`
+4. 弹出`5`，访问`3`，`res += 5-3`，把`3`放入队列，其实放的是`5：max(5,3)`
+5. 弹出`5`
+6. 弹出`10`
+
+同理可以推广到本题的`3`维上
