--- a/401-500.md
+++ b/401-500.md
@@ -99,3 +99,49 @@ for (int[] i : people) {
 6. 弹出`10`
 
 同理可以推广到本题的`2`维上
+# 409. Longest Palindrome
+记录每个单词出现的次数，然后取所有偶数，如果有奇数的情况，最后加上一个
+# 410. Split Array Largest Sum
+暴力的方法超时了
+
+考虑`dp`，`dp[i][j]`表示前`i`个划分成j份的结果，则`dp[len][m]`为答案
+``` java
+dp[i][j] = Math.min(dp[i][j], Math.max(dp[k][j - 1], sum[i] - sum[k]));
+```
+使用尝试二分试错，对某个值计算对应了多少个划分
+``` java
+//划分之后子数组最大值，大于数组中最大的一个元素，小于数组的总和
+long l = 0;
+long r = 0;
+int n = nums.length;
+//r是数组总和，l是数组中最大的值
+for (int i = 0; i < n; i++) {
+    r += nums[i];
+    if (l < nums[i]) {
+        l = nums[i];
+    }
+}
+long ans = r;
+while (l <= r) {
+    //求出中间值mid，计算子数组和不大于mid时，能划分出几个子数组
+    long mid = (l + r) >> 1;
+    long sum = 0;
+    int cnt = 1;//划分的子数组个数,初始值为1是因为，下面只在分割处加了1，分割1次，数组长度为2，所以初始值为1
+    for (int i = 0; i < n; i++) {
+        if (sum + nums[i] > mid) {
+            cnt++;
+            sum = nums[i];
+        } else {
+            sum += nums[i];
+        }
+    }
+    if (cnt <= m) {//划分出来的子数组少于m个，说明mid值大了
+        ans = Math.min(ans, mid);
+        r = mid - 1;
+    } else {//划分出来的子数组多于m个，说明mid值小了
+        l = mid + 1;
+    }
+}
+return (int) ans;
+
+```
