--- a/401-500.md
+++ b/401-500.md
@@ -143,5 +143,27 @@ while (l <= r) {
     }
 }
 return (int) ans;
+```
+# 412. Fizz Buzz
+循环判断即可
+# 413. Arithmetic Slices
+求出多少长度的等差数列，用公式可以求出有多少个，注意子数组连续所以可以直接求
 
+考虑动态规划，`dp[i]`以某个点结束以`i`结束的序列有多少个
+
+对`[1,2,3,4,5,6]`
+* 以`A[2]`结尾的等差数列：`[1,2,3]`
+* 以`A[3]`结尾的等差数列：`[1,2,3,4]`，`[2,3,4]`
+* 以`A[4]`结尾的等差数列：`[1,2,3,4,5]`，`[2,3,4,5]`，`[3,4,5]`
+> `dp[i]=dp[i-1]+1`
+``` java
+int[] dp = new int[A.length];
+int sum = 0;
+for (int i = 2; i < dp.length; i++) {
+    if (A[i] - A[i - 1] == A[i - 1] - A[i - 2]) {
+        dp[i] = 1 + dp[i - 1];
+        sum += dp[i];
+    }
+}
+return sum;
 ```
