--- a/401-500.md
+++ b/401-500.md
@@ -167,3 +167,16 @@ for (int i = 2; i < dp.length; i++) {
 }
 return sum;
 ```
+# 414. Third Maximum Number
+优先级队列，每次看是否需要插入下一个元素
+
+优先级队列可以放入重复元素，考虑使用`set`
+``` java
+TreeSet<Integer> set = new TreeSet<>();
+for (Integer elem : nums) {
+    set.add(elem);
+    if (set.size() > 3) set.remove(set.first());
+}
+
+return set.size() < 3 ? set.last() : set.first();
+```
