--- a/401-500.md
+++ b/401-500.md
@@ -180,3 +180,32 @@ for (Integer elem : nums) {
 
 return set.size() < 3 ? set.last() : set.first();
 ```
+# 415. Add Strings
+从后往前相加
+
+字符串加法、链表加法以及二进制加法之类的都可以这么写
+``` java
+StringBuilder sb = new StringBuilder();
+int carry = 0, i = num1.length()-1, j = num2.length()-1;
+while(i >= 0 || j >= 0 || carry != 0){
+    if(i>=0) carry += num1.charAt(i--)-'0';
+    if(j>=0) carry += num2.charAt(j--)-'0';
+    sb.append(carry%10);
+    carry /= 10;
+}
+return sb.reverse().toString();
+```
+# 416. Partition Equal Subset Sum
+类似`01背包`
+``` java
+dp[i][j] = dp[i - 1][j] || dp[i - 1][j - nums[i - 1]];
+```
+滚动数组优化到一维，由于需要使用上一个数组内的元素，所以从后往前推
+``` java
+res[0] = true;
+for (int num : nums) {
+    for (int i = sum; i >= num; i--) {
+        res[i] = res[i] || res[i - num];
+    }
+}
+```
