--- a/401-500.md
+++ b/401-500.md
@@ -209,3 +209,30 @@ for (int num : nums) {
     }
 }
 ```
+# 417. Pacific Atlantic Water Flow
+考虑每个点是否能到达两个海洋
+>优化点可以是同时判断该点能否到达每个海洋
+
+另外转变思路从四个边界开始遍历，能遍历到的点即是可以到达的点
+``` java
+boolean[][] Pacific = new boolean[m][n];
+boolean[][] Atlantic = new boolean[m][n];
+for(int i = 0; i < m; ++i) {
+    dfs(matrix, i, 0, Pacific, matrix[i][0]);
+    dfs(matrix, i, n-1, Atlantic, matrix[i][n-1]);
+}
+for(int i = 0; i < n; ++i) {
+    dfs(matrix, 0, i, Pacific, matrix[0][i]);
+    dfs(matrix, m-1, i, Atlantic, matrix[m-1][i]); 
+}
+
+void dfs(int[][] m, int x, int y, boolean[][] visited, int pre) {
+    if(x < 0 || y < 0 || x >= m.length || y >= m[0].length || visited[x][y] || m[x][y] < pre) 
+        return;
+    visited[x][y] = true;
+    dfs(m, x+1, y, visited, m[x][y]);
+    dfs(m, x-1, y, visited, m[x][y]);
+    dfs(m, x, y+1, visited, m[x][y]);
+    dfs(m, x, y-1, visited, m[x][y]);
+}
+```
