--- a/401-500.md
+++ b/401-500.md
@@ -236,3 +236,29 @@ void dfs(int[][] m, int x, int y, boolean[][] visited, int pre) {
     dfs(m, x, y-1, visited, m[x][y]);
 }
 ```
+# 419. Battleships in a Board
+一般做法就是使用`BFS`或者`DFS`扫描，计算连通图的个数
+
+这里直接考虑船头的个数即可
+# 421. Maximum XOR of Two Numbers in an Array
+因为要降低复杂度，使用前缀树，将二进制数按`01`排下来，在尾节点跟上值
+
+然后遍历，去找跟当前值不一样的一个`01`往下走到末尾节点，因为从头开始的，贪心的保证头不一样可以得到最好的结果
+# 423. Reconstruct Original Digits from English
+注意到某些单词只需一个字母就可以替代，如`zero`，有多少个`z`就有多少个`0`
+``` java
+for(char letter: s.toCharArray()) {
+  count[letter]++;
+}
+int[] out = new int[10];
+out[0] = count['z'];
+out[2] = count['w'];
+out[4] = count['u'];
+out[6] = count['x'];
+out[8] = count['g'];
+out[3] = count['h'] - out[8];
+out[5] = count['f'] - out[4];
+out[7] = count['s'] - out[6];
+out[9] = count['i'] - out[5] - out[6] - out[8];
+out[1] = count['n'] - out[7] - 2 * out[9];
+```
