--- a/401-500.md
+++ b/401-500.md
@@ -262,3 +262,22 @@ out[7] = count['s'] - out[6];
 out[9] = count['i'] - out[5] - out[6] - out[8];
 out[1] = count['n'] - out[7] - 2 * out[9];
 ```
+# 424. Longest Repeating Character Replacement
+考虑`dp[i][j][l]`
+* `i`表示第几位
+* `j`表示变了几次
+* `l`表示结束元素是什么
+当当前元素等于上一个元素的时候
+``` java
+dp[i][j][l] = dp[i - 1][j][l] + 1;
+```
+当当前元素不等于上一个元素的时候
+``` java
+dp[i][j][l] = dp[i - 1][j - 1][l] + 1;
+
+j==0 ? dp[i][j][l] = 0;
+```
+超内存可以用`%2`来优化，不过最终超时
+
+考虑滑动窗口，窗口长度大于了出现最多的次数字符+`k`个，说明需要缩减窗口了
+> `max`具有不减的属性， 只要没有出现更大的`max`，就不会有更好的结果，因此`l`向后移动时不需要更新`max`的值
