--- a/401-500.md
+++ b/401-500.md
@@ -281,3 +281,9 @@ j==0 ? dp[i][j][l] = 0;
 
 考虑滑动窗口，窗口长度大于了出现最多的次数字符+`k`个，说明需要缩减窗口了
 > `max`具有不减的属性， 只要没有出现更大的`max`，就不会有更好的结果，因此`l`向后移动时不需要更新`max`的值
+# 427. Construct Quad Tree
+直接四分的构建树
+# 429. N-ary Tree Level Order Traversal
+层次遍历
+# 430. Flatten a Multilevel Doubly Linked List
+看成二叉树进行前序遍历存在`list`中，然后拉平即可
