--- a/401-500.md
+++ b/401-500.md
@@ -287,3 +287,9 @@ j==0 ? dp[i][j][l] = 0;
 层次遍历
 # 430. Flatten a Multilevel Doubly Linked List
 看成二叉树进行前序遍历存在`list`中，然后拉平即可
+# 432. All O`one Data Structure
+`O(1)`比较麻烦，使用`map`加双端队列，双端队列使得取最大值、最小值可以为`O(1)`
+* `string -> int`
+* `int -> bucket`
+* `bucket` 由双端队列维护
+> `java`中的队列只支持去头和尾，这里需有直接拿某个元素的下一个，需自己创建维护
