--- a/401-500.md
+++ b/401-500.md
@@ -293,3 +293,20 @@ j==0 ? dp[i][j][l] = 0;
 * `int -> bucket`
 * `bucket` 由双端队列维护
 > `java`中的队列只支持去头和尾，这里需有直接拿某个元素的下一个，需自己创建维护
+# 433. Minimum Genetic Mutation
+遍历找到差为`1`个的，进行`bfs`
+# 434. Number of Segments in a String
+按空格`split`即可
+
+注意边界
+``` java
+String[] tokens = "".split("\\s++");
+tokens.length; // 1
+tokens[0]; // ""
+```
+# 435. Non-overlapping Intervals
+区间调度问题，一般可以用贪心的方法，考虑最后的结束时间
+>结尾越小，则后面越有可能容纳更多的区间
+
+另外考虑`dp`的思路，跟最长上升子序列类似，`dp[i]`表示当前最多的个数
+> dp[i+1] = max(dp[j]) + 1 其中 j<=i
