--- a/401-500.md
+++ b/401-500.md
@@ -310,3 +310,22 @@ tokens[0]; // ""
 
 另外考虑`dp`的思路，跟最长上升子序列类似，`dp[i]`表示当前最多的个数
 > dp[i+1] = max(dp[j]) + 1 其中 j<=i
+# 436. Find Right Interval
+把每个左端点放入`treemap`中，利用`ceilingKey`来找
+# 437. Path Sum III
+二重递归考虑每个节点，复杂度`O(n^2)`
+
+考虑前缀和的思路
+``` java
+int helper(TreeNode root, HashMap<Integer, Integer> map, int sum, int cur){
+    int res = 0;
+    if(root == null) return 0;
+    cur += root.val;
+    res += map.getOrDefault(cur - sum, 0);
+    map.put(cur, map.getOrDefault(cur, 0) + 1);
+    res += helper(root.left, map, sum, cur) 
+    res += helper(root.right, map, sum, cur);
+    map.put(cur, map.get(cur) - 1);
+    return res;
+}
+```
