--- a/401-500.md
+++ b/401-500.md
@@ -329,3 +329,32 @@ int helper(TreeNode root, HashMap<Integer, Integer> map, int sum, int cur){
     return res;
 }
 ```
+# 438. Find All Anagrams in a String
+滑动窗口，可以每个p长度窗口都比较一下，效率比较低
+``` java
+Arrays.equals(source, target)
+```
+考虑移动右端点，当发现大于`target`，一直减去左端点，当区间等于`p`的长度，则说明`i`值可以
+# 440. K-th Smallest in Lexicographical Order
+先想象一棵十叉数，位置其实是先序遍历的结果
+
+考虑给出`n`求出某一棵数有多少节点
+> 用下一棵数的位置来计算
+
+根据节点数考虑是平移一个节点，还是下移一个节点
+# 441. Arranging Coins
+二分求解，主要考虑返回边界
+
+另外可以用公式求解
+``` java
+return (int)(Math.sqrt(2 * (double)n + 0.25) - 0.5);
+```
+前`i`行完整的硬币数量为`(i+1)*i/2`
+
+前`i+1`行则为`(i+2)*(i+1)/2`
+
+`(i+1)*i/2 ≤ n < (i+2)*(i+1)/2`
+
+`sqrt(2n + 0.25)-1.5 < n ≤ sqrt(2n + 0.25) - 0.5`
+
+
