--- a/401-500.md
+++ b/401-500.md
@@ -356,5 +356,32 @@ return (int)(Math.sqrt(2 * (double)n + 0.25) - 0.5);
 `(i+1)*i/2 ≤ n < (i+2)*(i+1)/2`
 
 `sqrt(2n + 0.25)-1.5 < n ≤ sqrt(2n + 0.25) - 0.5`
+# 442. Find All Duplicates in an Array
+限定了数字的大小，把每个值放到对应位置，最后遍历一遍没放到正确位置的即是答案
 
+考虑不用空间的交换
+``` java
+a = a ^ b
+b = a ^ b
+a = a ^ b
+```
+也可以遍历一遍，把对应位置设置为负数，如果该位置已经是负数了，说明已经遍历过了
+# 443. String Compression
+遍历某个元素直到发现不等于该元素，最后返回`j`的位置其实就可以了
 
+可以用双指针，左边指向某个元素，右边移动到不等于该元素，代码量比较少
+``` java
+for (int i = 0, j = 0; i < n; i = j) {
+    while (j < n && chars[j] == chars[i]) j++;
+    chars[cur++] = chars[i];
+    if (j - i == 1) continue;
+    for (char c : String.valueOf(j - i).toCharArray()) chars[cur++] = c;
+}
+return cur;
+```
+# 445. Add Two Numbers II
+直接用转换成`string`，在转换成大数相加后构造链表
+
+也可以考虑翻转两个链表相加，或者递归到底
+
+或者用栈存储所有的元素
