--- a/401-500.md
+++ b/401-500.md
@@ -330,7 +330,7 @@ int helper(TreeNode root, HashMap<Integer, Integer> map, int sum, int cur){
 }
 ```
 # 438. Find All Anagrams in a String
-滑动窗口，可以每个p长度窗口都比较一下，效率比较低
+滑动窗口，可以每个`p`长度窗口都比较一下，效率比较低
 ``` java
 Arrays.equals(source, target)
 ```
@@ -385,3 +385,53 @@ return cur;
 也可以考虑翻转两个链表相加，或者递归到底
 
 或者用栈存储所有的元素
+# 446. Arithmetic Slices II - Subsequence
+跟[413](#413-arithmetic-slices)很像，只是这会可以不连续，因此`dp`需要再加一个循环
+>用`map`来存不同方差的个数
+
+另外考虑`dp[i][j]`表示以`j`、`i`结尾的个数，则前一个数为`2*j-i`，因此记录每个数的位置，可以进行`dp`
+``` java
+int[][] dp = new int[n][n];
+Map<Long, List<Integer>> map = new HashMap<>();
+for(int i = 0; i < n; i++) {
+    map.putIfAbsent((long)A[i], new ArrayList<>());
+    map.get((long) A[i]).add(i);
+}
+int res = 0;
+for(int i = 0; i < n; i++) {
+    for(int j = 0; j < i; j++) {
+        long target = 2*(long)A[j] - (long)A[i];
+        if(map.containsKey(target)) {
+            for(int k : map.get(target)) {
+                if(k < j)
+                    dp[j][i] += (dp[k][j] + 1);
+            }
+        }
+        res += dp[j][i];
+    }
+}
+```
+# 447. Number of Boomerangs
+对每个点计算不同距离的个数，用`map`存起来
+
+另外考虑重复使用一个`map`，并实时更新`map`
+``` java
+for(int i = 0;i < points.length;i++){
+    hashMap.clear();
+    for(int j = 0;j < points.length;j++){
+        if(i == j){
+            continue;
+        }
+        int d =  (points[i][0] - points[j][0])*(points[i][0] - points[j][0]) + (points[i][1] - points[j][1])*(points[i][1] - points[j][1]);
+        if(hashMap.containsKey(d)){
+            res += hashMap.get(d) * 2;               
+            hashMap.put(d, hashMap.get(d) + 1);
+        }else{
+            hashMap.put(d,1);
+        }
+    }
+}
+```
+# 448. Find All Numbers Disappeared in an Array
+跟[442](#442-find-all-duplicates-in-an-array)思路一样，交换每个元素到应该的位置，再遍历一遍找到没出现的元素
+
