--- a/401-500.md
+++ b/401-500.md
@@ -435,3 +435,5 @@ for(int i = 0;i < points.length;i++){
 # 448. Find All Numbers Disappeared in an Array
 跟[442](#442-find-all-duplicates-in-an-array)思路一样，交换每个元素到应该的位置，再遍历一遍找到没出现的元素
 
+也可以把所有出现的元素的位置置位负数，遍历一遍发现仍然为正的便是结果
+
