--- a/401-500.md
+++ b/401-500.md
@@ -436,4 +436,83 @@ for(int i = 0;i < points.length;i++){
 跟[442](#442-find-all-duplicates-in-an-array)思路一样，交换每个元素到应该的位置，再遍历一遍找到没出现的元素
 
 也可以把所有出现的元素的位置置位负数，遍历一遍发现仍然为正的便是结果
+# 449. Serialize and Deserialize BST
+前序遍历构建树，由于没有存空节点的信息，在还原的时候需要找到`right`的位置，利用`bst`的性质找到第一个大于`root`的节点当成右端点
 
+考虑层次遍历可以按照[297](https://github.com/humwawe/leetcode/blob/master/201-300.md#297-serialize-and-deserialize-binary-tree)思路
+
+另外考虑保存每个空节点
+``` java
+private int i;
+
+public String serialize(TreeNode root) {
+    StringBuilder sb = new StringBuilder();
+    doSerialize(root, sb);
+    return sb.toString();
+}
+
+private void doSerialize(TreeNode root, StringBuilder sb) {
+    if (root != null) {
+        sb.append(root.val + "_");
+        doSerialize(root.left, sb);
+        doSerialize(root.right, sb);
+    } else sb.append("#_");
+}
+
+public TreeNode deserialize(String data) {
+    String[] s = data.split("_");
+    if (s == null || s.length == 0)
+        return null;
+    i = 0;
+    return doDeserialize(s);
+}
+
+private TreeNode doDeserialize(String[] s) {
+    if (s[i].equals("#")) {
+        ++i;
+        return null;
+    }
+    TreeNode root = new TreeNode(Integer.parseInt(s[i++]));
+    root.left = doDeserialize(s);
+    root.right = doDeserialize(s);
+    return root;
+}
+```
+`split("_")` 会忽略最后的空字符
+``` java
+String[] s = "#_".split("_");
+System.out.println(s.length); // 1
+```
+# 450. Delete Node in a BST
+定位被删除元素，并记录父元素，找右边的第一个元素（先右再一直左）
+
+也可以递归的去删除
+``` java
+if (root == null) return null;
+if (root.val == key) {
+    if (root.right == null) {
+        return root.left;
+    } else {
+        TreeNode node = root.right;
+        TreeNode parent = root;
+        while (node != null && node.left != null) {
+            parent = node;
+            node = node.left;
+        }
+        if (parent.left == node) parent.left = node.right;
+        if (parent.right == node) parent.right = node.right;
+        node.left = root.left;
+        node.right = root.right;
+        return node;
+    }
+} else if (root.val < key) {
+    root.right = deleteNode(root.right, key);
+} else {
+    root.left = deleteNode(root.left, key);
+}
+return root;
+```
+# 451. Sort Characters By Frequency
+统计出现的次数，对`value`排序输出
+
+也可以遍历每次取最大值，然后输出
