--- a/401-500.md
+++ b/401-500.md
@@ -516,3 +516,16 @@ return root;
 统计出现的次数，对`value`排序输出
 
 也可以遍历每次取最大值，然后输出
+# 452. Minimum Number of Arrows to Burst Balloons
+跟[435](#435-non-overlapping-intervals)思路一样，按第二个点排序，然后贪心求解
+> 如果某个点的`start`大于了某个点的`end`，肯定需要另外一支箭
+# 453. Minimum Moves to Equal Array Elements
+`n-1`可以加`1`等价于某个值减去`1`
+# 454. 4Sum II
+存上每两个数组相加的值的个数，遍历加起来
+>优化的点是可以在遍历`c`、`d`的时候直接就求结果
+``` java
+for(int i=0;i<C.length;i++)
+    for(int j=0;j<D.length;j++)
+        res+=abMap.getOrDefault(-(C[i]+D[j]), 0);
+```
