--- a/401-500.md
+++ b/401-500.md
@@ -529,3 +529,30 @@ for(int i=0;i<C.length;i++)
     for(int j=0;j<D.length;j++)
         res+=abMap.getOrDefault(-(C[i]+D[j]), 0);
 ```
+# 455. Assign Cookies
+`sort`之后贪心的去比较，移动指针
+# 456. 132 Pattern
+`O(n^3)`超时，记录每个点左边的最小值，遍历每个点找是否存在右边的点在这中间`O(n^2)`可以通过
+
+另外考虑维护单调递减的栈，用来存最大值（栈底），记录第二大的值，从后往前看是否存在一个数小于第二大的值
+``` java
+Stack<Integer> stack = new Stack<>();
+int second = Integer.MIN_VALUE;
+stack.push(nums[nums.length - 1]);
+for (int i = nums.length - 2; i >= 0; i++) {
+    if (nums[i] < second) {
+        return true;
+    } else {
+        while (!stack.isEmpty() && nums[i] > stack.peek()) {
+            second = Math.max(second, stack.pop());
+        }
+        stack.push(nums[i]);
+    }
+}
+return false;
+```
+# 457. Circular Array Loop
+使用`vis`记录访问的点，从某点出发访问到的点不需要再访问了
+
+用`set`记录某一次访问的情况，如果出现在了`set`就说明找到环了
+>要注意方向问题，单个点的环路问题
