--- a/401-500.md
+++ b/401-500.md
@@ -556,3 +556,8 @@ return false;
 
 用`set`记录某一次访问的情况，如果出现在了`set`就说明找到环了
 >要注意方向问题，单个点的环路问题
+# 458. Poor Pigs
+考虑总时间`60`，死亡时间`15`，`60/15 = 4`
+* 一只猪可以喝四次，分辨出`5`个桶（最后一个可以以前四个的结果来定）
+* 如果两只猪，可以喝到`5^2 = 25`个
+>把`25`排成正方形，一只猪一次喝一行中`5`个混合的水，另一只猪和一列中混合的水，以猪死亡的时间的交叉点便是有毒的桶。由此推到高位
