--- a/401-500.md
+++ b/401-500.md
@@ -561,3 +561,19 @@ return false;
 * 一只猪可以喝四次，分辨出`5`个桶（最后一个可以以前四个的结果来定）
 * 如果两只猪，可以喝到`5^2 = 25`个
 >把`25`排成正方形，一只猪一次喝一行中`5`个混合的水，另一只猪和一列中混合的水，以猪死亡的时间的交叉点便是有毒的桶。由此推到高位
+# 459. Repeated Substring Pattern
+暴力所有的长度，看是否重复，可以通过，但复杂度高，优化的是长度不是整数倍就`continue`
+
+考虑接一个s，掐头去尾留中间，若还包含s，则说明是满足的
+``` java
+String str = s + s;
+return str.substring(1, str.length() - 1).contains(s);;
+```
+正则表达式
+``` java
+return s.matches("(\\w+)\\1+");
+```
+采用`kmp`的思路
+``` java
+return (dp[n] != 0) && (dp[n] % (n - dp[n]) == 0);
+```
