--- a/401-500.md
+++ b/401-500.md
@@ -577,3 +577,18 @@ return s.matches("(\\w+)\\1+");
 ``` java
 return (dp[n] != 0) && (dp[n] % (n - dp[n]) == 0);
 ```
+# 460. LFU Cache
+一个带`hash`的双向链表，保证操作是`O(1)`
+
+`2`个`map`
+* `key`->出现的频率
+* 频率->双向链表，往这个频率里加删除都是`O(1)`
+# 461. Hamming Distance
+求与`1`相与的结果是否想等
+
+也可以直接异或后数`1`的个数
+``` java
+Integer.bitCount(x^y);
+```
+# Minimum Moves to Equal Array Elements II
+都往中位数移动
