--- a/401-500.md
+++ b/401-500.md
@@ -592,3 +592,25 @@ Integer.bitCount(x^y);
 ```
 # Minimum Moves to Equal Array Elements II
 都往中位数移动
+# 463. Island Perimeter
+遍历每个点，找周围的`0`
+
+可以不用`dfs`，直接循环每个点，看周围的`0`，或者求一半即可
+``` java
+for (int i = 0; i < row; i++){
+    for (int j = 0; j < col; j++){
+        if (grid[i][j] == 1){
+            if (j == 0 || grid[i][j-1]==0)
+                res ++;
+            if (i == 0 || grid[i-1][j]==0)
+                res ++;
+        }
+    }
+}
+return res * 2;
+```
+# 464. Can I Win
+直接搜索超时，直接搜索时候，用`vis`数组记录访问的元素，要注意回溯标记
+> 在判断中`return`，需要在`return`之前回溯标记
+
+记忆化的搜索，这里用一个`int`值的位表示某个位置是否用过，记录所有用过的组合的结果，比如搜索过`1,2`，后面还有很多值，但其实`2,1`的组合不需要再搜索
