--- a/401-500.md
+++ b/401-500.md
@@ -614,3 +614,8 @@ return res * 2;
 > 在判断中`return`，需要在`return`之前回溯标记
 
 记忆化的搜索，这里用一个`int`值的位表示某个位置是否用过，记录所有用过的组合的结果，比如搜索过`1,2`，后面还有很多值，但其实`2,1`的组合不需要再搜索
+# 466. Count The Repetitions
+暴力`s1*n1`，看能凑出多少个`s2`，再除以`n2`
+
+另外考虑在下一段`s1`中，需要匹配`s2`的位置，当重复出现`s2`的位置，说明这个段可以匹配一个`s2`
+> 即要找一个整段（多个`s1`组成）刚好能匹配一个`s2`
