--- a/401-500.md
+++ b/401-500.md
@@ -619,3 +619,42 @@ return res * 2;
 
 另外考虑在下一段`s1`中，需要匹配`s2`的位置，当重复出现`s2`的位置，说明这个段可以匹配一个`s2`
 > 即要找一个整段（多个`s1`组成）刚好能匹配一个`s2`
+# 467. Unique Substrings in Wraparound String
+统计以`i`处结尾时候的个数，并记录最大的值到该字母中，对于`zabd`
+* 0 z 1
+* 1 za a 2
+* 2 zab ab b 3
+* 3 d 1
+
+最后将不同字母结尾的情况加起来
+# 468. Validate IP Address
+边界条件比较多，对于`split`
+``` java
+"12:123:12:".split(":") // [12, 123, 12]
+```
+
+另外考虑正则
+``` java
+String regex0 = "(\\d|[1-9]\\d|1\\d\\d|2[0-4]\\d|25[0-5])";
+String regexIPv4 = regex0 + "(\\." + regex0 + "){3}";
+String regex1 = "([\\da-fA-F]{1,4})";
+String regexIPv6 = regex1 + "(:" + regex1 + "){7}";
+
+String result = "Neither";
+if (IP.matches(regexIPv4)) {
+    result = "IPv4";
+} else if (IP.matches(regexIPv6)) {
+    result = "IPv6";
+}
+return result;
+```
+# 470. Implement Rand10() Using Rand7()
+扔两次，第一次的奇偶判断是否要超过`7`，要使得奇偶一样，便抛弃一个`7`，此时可以构造`1-14`的等概率区间，抛弃掉大于`10`的
+
+另外可以扔两次构造一个映射，两位`7`可以当成`49`，然后抛弃`40`以上的，做一个映射
+``` java
+while (true) {
+    int num = (rand7() - 1) * 7 + rand7() - 1;
+    if (num < 40) return num % 10 + 1;
+}
+```
