--- a/401-500.md
+++ b/401-500.md
@@ -658,3 +658,6 @@ while (true) {
     if (num < 40) return num % 10 + 1;
 }
 ```
+# 472. Concatenated Words
+把所有单词存到`hashset`里，对每个单词从`0`开始遍历到末尾，看前缀是否在`set`里
+> `set`也可以用前缀树来组织，遍历思路差不多
