--- a/401-500.md
+++ b/401-500.md
@@ -661,3 +661,18 @@ while (true) {
 # 472. Concatenated Words
 把所有单词存到`hashset`里，对每个单词从`0`开始遍历到末尾，看前缀是否在`set`里
 > `set`也可以用前缀树来组织，遍历思路差不多
+# 473. Matchsticks to Square
+把一条边加到某个边上
+
+排序后速度提升很多，注意排序逆序不能排`int[]`
+# 474. Ones and Zeroes
+多维背包，节省空间逆序求
+``` java
+dp[j][k]=Math.max(dp[j][k],1+dp[j-zeros][k-ones]);
+```
+# 475. Heaters
+二分`check`不同的可能性
+
+另外其实考虑房屋左右侧的热水器，
+* 取距离小的那个
+* 最终取的是所有房屋所需最大的那个半径
