--- a/401-500.md
+++ b/401-500.md
@@ -676,3 +676,16 @@ dp[j][k]=Math.max(dp[j][k],1+dp[j-zeros][k-ones]);
 另外其实考虑房屋左右侧的热水器，
 * 取距离小的那个
 * 最终取的是所有房屋所需最大的那个半径
+# 476. Number Complement
+转换成二进制再求反再转换回来
+
+考虑与全`1`异或，找到相同位数的全`1`异或
+``` java
+int p=1;
+int c=num;
+while(c!=0){
+    p<<=1;
+    c>>=1;
+}
+return (p-1)^num;
+```
