--- a/401-500.md
+++ b/401-500.md
@@ -584,7 +584,7 @@ return (dp[n] != 0) && (dp[n] % (n - dp[n]) == 0);
 * `key`->出现的频率
 * 频率->双向链表，往这个频率里加删除都是`O(1)`
 # 461. Hamming Distance
-求与`1`相与的结果是否想等
+求每一位与`1`相与的结果是否想等
 
 也可以直接异或后数`1`的个数
 ``` java
@@ -689,3 +689,15 @@ while(c!=0){
 }
 return (p-1)^num;
 ```
+# 477. Total Hamming Distance
+统计每个位置`0`和`1`的个数，最后乘起来
+>由于不是`1`就是`0`也可以算一个，然后用数组长度减去另一个
+# 478. Generate Random Point in a Circle
+先随机角度，再随机长度
+> 注意随机角度在圆上的改变不是均匀的，最后的长度需要求个`r`的开方
+
+更好的方法是取一个正方形，考虑产生的点是否在圆内
+# 480. Sliding Window Median
+维护一个排序好的`list`，每次增加和删除都去二分的查找应该的位置
+
+另外一般中位数考虑使用最大最小堆，维护两个堆，然后维护平衡，堆顶即为中位数
