--- a/401-500.md
+++ b/401-500.md
@@ -701,3 +701,5 @@ return (p-1)^num;
 维护一个排序好的`list`，每次增加和删除都去二分的查找应该的位置
 
 另外一般中位数考虑使用最大最小堆，维护两个堆，然后维护平衡，堆顶即为中位数
+# 481. Magical String
+从`122`，第三位开始递推，最后数`1`的个数
