--- a/401-500.md
+++ b/401-500.md
@@ -703,3 +703,18 @@ return (p-1)^num;
 另外一般中位数考虑使用最大最小堆，维护两个堆，然后维护平衡，堆顶即为中位数
 # 481. Magical String
 从`122`，第三位开始递推，最后数`1`的个数
+# 482. License Key Formatting
+求出第一部分有多少个，再拼接，或者考虑逆序，或者拼完了再插入
+``` java
+for (int i = 0;i < S.length();i++) {
+    if (S.charAt(i) != '-') {
+        builder.append(S.charAt(i));
+    }
+}
+
+for (int i = builder.length() - K;i > 0;i -= K) {
+    builder.insert(i,'-');
+}
+
+return builder.toString().toUpperCase();
+```
