--- a/401-500.md
+++ b/401-500.md
@@ -718,3 +718,22 @@ for (int i = builder.length() - K;i > 0;i -= K) {
 
 return builder.toString().toUpperCase();
 ```
+# 483. Smallest Good Base
+从最大的长度二分的算（最小的进制），若找到，即可返回
+> 注意边界，考虑长度的最大值，考虑进制的最大值，可由等比的公式推出来
+# 485. Max Consecutive Ones
+遍历一遍数`1`的个数，到`0`就重置，最后再跟`len`比较一下
+# 486. Predict the Winner
+记录第一个人最多能拿多少
+> 在偶数的时候，第一个人肯定赢，因为如果第二个人能赢，那第一个人可以像第二个人那样拿
+
+另外考虑第一个人能比第二个多多少
+> 数据大需要记忆化消除子问题
+``` java
+private int helper2(int[] nums, int i, int j) {
+    if (i == j) {
+        return nums[i];
+    }
+    return Math.max(nums[i] - helper2(nums, i + 1, j), nums[j] - helper2(nums, i, j - 1));
+}
+```
