--- a/401-500.md
+++ b/401-500.md
@@ -737,3 +737,61 @@ private int helper2(int[] nums, int i, int j) {
     return Math.max(nums[i] - helper2(nums, i + 1, j), nums[j] - helper2(nums, i, j - 1));
 }
 ```
+写成动态规划，`dp[i][j]`表示第一个人能比第二个多多少
+``` java
+dp[i][j] = Math.max(nums[i] - dp[i + 1][j], nums[j] - dp[i][j - 1]);
+```
+返回`dp[0][len] >= 0`，两种写法
+``` java
+for (int i = 0; i < n; i++) dp[i][i] = nums[i];
+for (int i = n - 1; i >= 0; i--) {
+    for (int j = i + 1; j < n; j++) {
+        dp[i][j] = Math.max(nums[i] - dp[i + 1][j], nums[j] - dp[i][j - 1]);
+    }
+}
+```
+``` java
+for (int i = 0; i < n; i++) dp[i][i] = nums[i];
+for (int step = 2; step <= n; step++) {
+    for (int i = 0; i < n - step + 1; i++) {
+        int j = i + step - 1;
+        dp[i][j] = Math.max(nums[i] - dp[i + 1][j], nums[j] - dp[i][j - 1]);
+    }
+}
+```
+# 488. Zuma Game
+比较暴力的`dfs`，两个优化点过了
+* 一个是当前的`step`大于等于`result`，可以停止
+* 一个是当前插入的与本来元素不相同了，可以停止
+
+另外可以去算每个位置需要多少个，遍历所有情况
+``` java
+public int findMinStep(String board, String hand) {
+    int[] handCount = new int[26];
+    for (int i = 0; i < hand.length(); i++) {
+        handCount[hand.charAt(i) - 'A']++;
+    }
+    int result = backtrack(board + "#", handCount); 
+    return result == MAXCOUNT ? -1 : result;
+}
+
+private int backtrack(String s, int[] h) {
+    s = removeConsecutive(s);     
+    if (s.equals("#")) return 0;
+    int rs = MAXCOUNT, need = 0;
+    int i = 0;
+    for (int j = 0 ; j < s.length(); ++j) {
+        if (s.charAt(j) == s.charAt(i)) continue;
+        need = 3 - (j - i);
+        if (h[s.charAt(i) - 'A'] >= need) {
+            h[s.charAt(i) - 'A'] -= need;
+            rs = Math.min(rs, need + backtrack(s.substring(0, i) + s.substring(j), h));
+            h[s.charAt(i) - 'A'] += need;
+        }
+        i = j;
+    }
+    return rs;
+}
+```
+# 491. Increasing Subsequences
+考虑重复的问题，在当前的位置记录用过的元素
