--- a/401-500.md
+++ b/401-500.md
@@ -795,3 +795,8 @@ private int backtrack(String s, int[] h) {
 ```
 # 491. Increasing Subsequences
 考虑重复的问题，在当前的位置记录用过的元素
+
+另外考虑将所有元素加入`set`后去重，会慢一点
+``` java
+Set<List<Integer>> ans = new HashSet<>();
+```
